[metadata]
name = pybaker
version = 1.0.2
author = oats
author_email = chadriven12345@gmail.com
description = A build system library
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/OatsLaBoats/pybaker
project_urls =
    Bug Tracker = https://github.com/OatsLaBoats/pybaker/issues
    repository = https://github.com/OatsLaBoats/pybaker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src